# MergeMapper

./: .gitignore  .releaserc  CMakeLists.txt  CMakePresets.json  Debug.ppj  README.md  Release.ppj  unex.yml  vcpkg-configuration.json  vcpkg.json  version.rc.in
.github/workflows/: build.yml
cmake/: CommonLibSSESamplePlugin.manifest.in  PluginInfo.h.in  x64-windows-skse.cmake
cmake/ports/mergemapper/: vcpkg.json
contrib/Distribution/Config/: MergeMapper.yaml
include/: MergeMapper.h  MergeMapperPluginAPI.h
include/Sample/: Config.h
src/: Config.cpp  Config.h  HitCounterManager.cpp  Main.cpp  MergeMapper.cpp  MergeMapperPluginAPI.cpp  PCH.h  Papyrus.cpp  Papyrus.h
test/: HitCounterManager.cpp
